--- a/src/style.css
+++ b/src/style.css
@@ -155,7 +155,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  height: 1080px;
   background-color: #d9d9d9;
   position: relative;
 }
@@ -1184,16 +1184,19 @@
 .member-profile-page .title-section .save {
   display: flex;
   align-items: center;
+  padding: 5px 10px;
+  border: 1px solid #1676bc;
 }
 
 .member-profile-page .title-section .save img {
-  width: 24px;
+  width: 20px;
   cursor: pointer;
+  padding: 0px 5px 0px 0px;
 }
 
 .member-profile-page .title-section .save span {
-  padding: 0 10px;
   cursor: pointer;
+  color: #007bff;
 }
 
 .member-profile-page .profile-main {
@@ -1209,40 +1212,75 @@
   flex: 3;
 }
 
-.member-profile-page .profile-main .text-wrap .job {
-  color: #888;
-}
-
 .member-profile-page .profile-main .text-wrap .name {
-  font-size: 1.5em;
+  font-size: 2em;
   font-weight: bold;
+  margin: 0;
 }
 
-.member-profile-page .profile-main .text-wrap .name > span {
-  font-size: 0.7em;
+.member-profile-page .profile-main .text-wrap .name .job {
   color: #888;
-  padding-left: 10px;
+  font-size: 0.5em;
   font-weight: normal;
+  padding-left: 10px;
 }
 
-.member-profile-page .profile-main .text-wrap .phone {
-  color: #888;
+.member-profile-page .profile-main .text-wrap .mark {
+  display: flex;
+  align-items: center;
 }
 
-.member-profile-page .profile-main .text-wrap .phone > span {
-  color: black;
+.member-profile-page .profile-main .text-wrap .mark img {
+  width: 24px;
+  padding-right: 5px;
+}
+
+.member-profile-page .profile-main .text-wrap .sub-title {
   font-weight: bold;
-  padding-right: 10px;
+  margin: 0;
+  border-left: #1676bc 5px solid;
+  margin-top: 50px;
 }
 
-.member-profile-page .profile-main .text-wrap .email {
-  color: #888;
+.member-profile-page .profile-main .text-wrap .sub-title span {
+  padding-left: 10px;
 }
 
-.member-profile-page .profile-main .text-wrap .email > span {
-  color: black;
+.member-profile-page .profile-main .text-wrap .sub-content01 {
+  margin-left: 15px;
+  font-size: 0.7em;
+}
+
+.member-profile-page .profile-main .text-wrap .sub-content02 {
+  margin: 20px 10px;
+  width: 70%;
+}
+
+.member-profile-page .profile-main .text-wrap .sub-content02 span {
+  border: 1px solid black;
+  padding: 5px;
+  margin: 5px;
+}
+
+.member-profile-page .sub-menu {
+  margin: 10%;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 2px solid #d9d9d9;
+}
+
+.member-profile-page .sub-menu .menu-item {
+  color: #ccc;
+  cursor: pointer;
+}
+
+.member-profile-page .sub-menu .menu-item.active {
+  color: #007bff;
   font-weight: bold;
-  padding-right: 10px;
+}
+
+.member-profile-page .fold-section .section {
 }
 
 .member-profile-page .profile-main .img-wrap {
@@ -1257,23 +1295,24 @@
 
 .member-profile-page .profile-main .ment {
   border-top: 3px solid #7e7e7e;
+  border-bottom: 3px solid #7e7e7e;
   padding: 5% 0;
   margin: 0;
 }
 
 .member-profile-page .fold-section {
-  margin: 5% 10%;
+  margin: 0 10%;
   padding-bottom: 5%;
 }
 
 .member-profile-page .fold-section > div {
-  padding-bottom: 5%;
+  padding-bottom: 20;
 }
 
 .member-profile-page .fold-section > div .title {
   font-size: 1.5em;
   font-weight: bold;
-  border-left: #1676bc 10px solid;
+  border-left: #1676bc 5px solid;
 }
 
 .member-profile-page .fold-section > div .title p {
@@ -1340,6 +1379,44 @@
   height: 1px;
   background-color: #e0e0e0;
   margin-top: 10px;
+}
+
+.member-profile-page .info {
+  margin: 0 10% 10% 0;
+  text-align: right;
+}
+
+.member-profile-page .info .phone {
+  color: #888;
+}
+
+.member-profile-page .info .phone > span {
+  color: black;
+  font-weight: bold;
+  padding-right: 10px;
+}
+
+.member-profile-page .info .email {
+  color: #888;
+}
+
+.member-profile-page .info .email > span {
+  color: black;
+  font-weight: bold;
+  padding-right: 10px;
+}
+
+.member-profile-page .top-btn {
+  position: fixed;
+  bottom: 5%;
+  right: 5%;
+  border: none;
+  cursor: pointer;
+  background: none;
+}
+
+.member-profile-page .top-btn img {
+  width: 24px;
 }
 
 /* 법인소식 */
